# PyA3EDA

./: README.md  a3eda.py  crea_sub_stat.py  create_input.py  extrct.py  plotting.py  pyproject.toml  reactionpath.py
src/PyA3EDA/: __init__.py  cli.py
src/PyA3EDA/core/: __init__.py  constants.py
src/PyA3EDA/core/builders/: __init__.py  builder.py  molecule_builder.py  rem_builder.py
src/PyA3EDA/core/commands/: __init__.py  generation.py
src/PyA3EDA/core/config/: __init__.py  config_manager.py
src/PyA3EDA/core/exporters/: data_exporter.py
src/PyA3EDA/core/extractors/: __init__.py  data_extractor.py  data_extractor_clean.py  old_data_extractor.py  profile_extractor.py  profile_extractor_functional.py
src/PyA3EDA/core/parsers/: __init__.py  output_xyz_parser.py  qchem_result_parser.py  qchem_status_parser.py  xyz_parser.py
src/PyA3EDA/core/plotters/: __init__.py  profile_plotter.py
src/PyA3EDA/core/runners/: __init__.py  executor.py
src/PyA3EDA/core/status/: __init__.py  status_checker.py
src/PyA3EDA/core/utils/: __init__.py  argument_parser.py  file_utils.py  path_utils.py  thermodynamics.py  unit_converter.py  xyz_format_utils.py
src/PyA3EDA/core/workflow/: __init__.py  workflow_manager.py
src/a3eda/: __init__.py  cli.py
src/a3eda/core/: __init__.py  a3eda.py  config_manager.py  constants.py  data_exporter.py  data_processor.py  energy_profile_generator.py  file_handler.py  file_operations.py  handlers.py  input_generator.py  parser.py  qchem_calculation.py  status_checker.py  utilities.py
